--- a/s3_deploy.yml
+++ b/s3_deploy.yml
@@ -17,7 +17,7 @@ phases:
       # It uploads new and modified files, and deletes files that are not present in the "dist" folder.
 artifacts:
   files:
-    - '**/*'  # Include all files from the build phase as artifacts
+    - dist/**/*  # Include all files from the build phase as artifacts
 
 # Replace "YOUR_PROJECT_NAME" with your project name
 # This is the name you'll see in the AWS CodeBuild console
