--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-toastify": "^4.1.0",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "js-cookie": "^3.0.5",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-otp-input-hook": "^1.0.10",
+    "react-toastify": "^9.1.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "5.1.6",
+    "universal-cookie": "^4.0.4"
   }
 }
