--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.60.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -21,10 +25,14 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-otp-input-hook": "^1.0.10",
     "react-toastify": "^9.1.3",
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
     "universal-cookie": "^4.0.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
