--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "param-lms-fe",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest -c jest.config.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -23,6 +25,7 @@
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
     "next": "13.4.10",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
@@ -33,6 +36,19 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.16.0"
-  }
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.3",
+    "@types/react-modal": "^3.16.0",
+    "babel-jest": "^29.6.2",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
