--- a/package.json
+++ b/package.json
@@ -1,57 +1,141 @@
-
 {
-  
+  
   "name": "param-lms-fe",
+  
   "version": "0.1.0",
+  
   "private": true,
-   
-
+  
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest -c jest.config.cjs"
+  
+    
+  "dev": "next dev",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint",
+  
+    
+  "test": "jest -c jest.config.cjs"
+  
   },
+  
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.3",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@sentry/nextjs": "^7.60.1",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@types/react-toastify": "^4.1.0",
-    "axios": "^1.4.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "js-cookie": "^3.0.5",
-    "next": "13.4.10",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-otp-input-hook": "^1.0.10",
-    "react-toastify": "^9.1.3",
-    "ts-loader": "^9.4.4",
-    "typescript": "5.1.6",
-    "universal-cookie": "^4.0.4"
+  
+    
+  "@emotion/react": "^11.11.1",
+  
+    
+  "@emotion/styled": "^11.11.0",
+  
+    
+  "@mui/material": "^5.14.3",
+  
+    
+  "@reduxjs/toolkit": "^1.9.5",
+  
+    
+  "@sentry/nextjs": "^7.60.1",
+  
+    
+  "@types/node": "20.4.2",
+  
+    
+  "@types/react": "18.2.15",
+  
+    
+  "@types/react-dom": "18.2.7",
+  
+    
+  "@types/react-toastify": "^4.1.0",
+  
+    
+  "axios": "^1.4.0",
+  
+    
+  "eslint": "8.45.0",
+  
+    
+  "eslint-config-next": "13.4.10",
+  
+    
+  "js-cookie": "^3.0.5",
+  
+    
+  "next-redux-wrapper": "^8.1.0",
+  
+    
+  "react": "18.2.0",
+  
+    
+  "react-dom": "18.2.0",
+  
+    
+  "react-icons": "^4.10.1",
+  
+    
+  "react-otp-input-hook": "^1.0.10",
+  
+    
+  "react-responsive-modal": "^6.4.2",
+  
+    
+  "react-toastify": "^9.1.3",
+  
+    
+  "ts-loader": "^9.4.4",
+  
+    
+  "typescript": "5.1.6",
+  
+    
+  "universal-cookie": "^4.0.4"
+  
   },
+  
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@types/jest": "^29.5.3",
-    "@types/react-modal": "^3.16.0",
-    "babel-jest": "^29.6.2",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1"
+  
+    
+  "@babel/core": "^7.22.9",
+  
+    
+  "@babel/preset-env": "^7.22.9",
+  
+    
+  "@babel/preset-react": "^7.22.5",
+  
+    
+  "@babel/preset-typescript": "^7.22.5",
+  
+    
+  "@types/jest": "^29.5.3",
+  
+    
+  "@types/react-modal": "^3.16.0",
+  
+    
+  "babel-jest": "^29.6.2",
+  
+    
+  "jest": "^29.6.2",
+  
+    
+  "ts-jest": "^29.1.1"
+  
   },
+  
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  
   "main": "next.config.js",
+  
   "keywords": [],
+  
   "author": "",
+  
   "license": "ISC"
 }
