--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
     "next-redux-wrapper": "^8.1.0",
-    "quill": "^1.3.7",
+    "quill": "^1.3.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
     "react-otp-input-hook": "^1.0.10",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
