--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
     "react-otp-input-hook": "^1.0.10",
-    "react-quill": "^2.0.0",
+    "react-quill": "2.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
     "universal-cookie": "^4.0.4"
