--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.3",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "@sentry/nextjs": "^7.60.1",
+    "@sentry/utils": "^7.92.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/react-toastify": "^4.1.0",
+    "@types/redux": "^3.6.31",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "eslint": "8.45.0",
