--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./*"
@@ -34,8 +35,12 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "dist/types/**/*.ts"
-, "app/interfaces/videoUtils.test.js", "middleware.ts"  ],
+    "dist/types/**/*.ts",
+    "app/interfaces/**/*.ts",
+    "middleware.ts",
+    "node_modules/react-redux",
+    
+  ],
   "exclude": [
     "node_modules"
   ]
