--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/redux": "^3.6.31",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
@@ -30,6 +31,7 @@
     "quill": "^1.3.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
