--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@leafygreen-ui/confirmation-modal": "^5.0.9",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@sentry/nextjs": "^7.60.1",
@@ -36,6 +37,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
     "react-otp-input-hook": "^1.0.10",
+    "react-player": "^2.14.1",
     "react-quill": "2.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
