--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/redux": "^3.6.31",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "cache": "^3.0.0",
     "chart.js": "^4.4.1",
+    "clean": "^4.0.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
