--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@leafygreen-ui/confirmation-modal": "^5.0.9",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^1.9.7",
-    "@sentry/nextjs": "^7.100.1",
-    "@sentry/utils": "^7.92.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -33,7 +31,7 @@
     "next-redux-wrapper": "^8.1.0",
     "quill": "^1.3.6",
     "react": "18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
@@ -41,6 +39,7 @@
     "react-otp-input-hook": "^1.0.10",
     "react-player": "^2.14.1",
     "react-quill": "2.0.0",
+    "react-redux": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
