--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@leafygreen-ui/confirmation-modal": "^5.0.9",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^2.2.0",
     "@types/node": "20.4.2",
