--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-otp-input-hook": "^1.0.10",
     "react-player": "^2.14.1",
     "react-quill": "2.0.0",
+    "react-redux": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
