--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-otp-input-hook": "^1.0.10",
     "react-player": "^2.14.1",
     "react-quill": "2.0.0",
