--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-number-input": "^15.5.1",
     "react-otp-input-hook": "^1.0.10",
     "react-player": "^2.14.1",
     "react-quill": "2.0.0",
