--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cache": "^3.0.0",
     "chart.js": "^4.4.1",
     "clean": "^4.0.2",
+    "client-only": "^0.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
@@ -35,6 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.4.0",
     "react-otp-input-hook": "^1.0.10",
@@ -55,6 +57,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/gtag.js": "^0.0.19",
     "@types/jest": "^29.5.3",
     "@types/quill": "^2.0.10",
     "@types/react-modal": "^3.16.0",
