--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^2.2.0",
+    "@types/chart.js": "^2.9.41",
+    "@types/faker": "^6.6.9",
     "@types/node": "20.4.2",
     "@types/react-dom": "18.2.7",
     "@types/react-toastify": "^4.1.0",
@@ -23,10 +25,11 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.3",
     "cache": "^3.0.0",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "clean": "^4.0.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
+    "faker": "^6.6.6",
     "js-cookie": "^3.0.5",
     "next-redux-wrapper": "^8.1.0",
     "quill": "^1.3.6",
@@ -56,6 +59,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@faker-js/faker": "^8.4.1",
     "@types/jest": "^29.5.3",
     "@types/quill": "^2.0.10",
     "@types/react-modal": "^3.16.0",
