--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "redux-persist": "^6.0.0",
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -63,6 +64,7 @@
     "@types/jest": "^29.5.3",
     "@types/quill": "^2.0.10",
     "@types/react-modal": "^3.16.0",
+    "@types/uuid": "^9.0.8",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1"
