--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-redux-wrapper": "^8.1.0",
     "quill": "^2.0.1",
     "react": "18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
