--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@leafygreen-ui/confirmation-modal": "^5.0.9",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.14.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.0",
     "@types/chart.js": "^2.9.41",
     "@types/faker": "^6.6.9",
