--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@reduxjs/toolkit": "^2.2.0",
     "@types/chart.js": "^2.9.41",
     "@types/faker": "^6.6.9",
-    "@types/node": "20.4.2",
-    "@types/react-dom": "18.2.7",
     "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.31",
     "axios": "^1.5.0",
@@ -65,7 +63,11 @@
     "@faker-js/faker": "^8.4.1",
     "@types/jest": "^29.5.3",
     "@types/next": "^9.0.0",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.0",
+    "@types/react-transition-group": "^4.4.10",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1"
