--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
     "faker": "^5.5.3",
+    "google-auth-library": "^9.11.0",
     "js-cookie": "^3.0.5",
+    "next-auth": "^4.24.7",
     "next-redux-wrapper": "^8.1.0",
     "quill": "^2.0.1",
     "react": "18.2.0",
