--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "faker": "^5.5.3",
     "js-cookie": "^3.0.5",
     "next-redux-wrapper": "^8.1.0",
+    "pdfjs-dist": "^3.10.111",
     "quill": "^2.0.1",
     "react": "18.2.0",
     "react-audio-player": "^0.17.0",
@@ -44,6 +45,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-number-input": "^1.14.8",
     "react-otp-input-hook": "^1.0.10",
+    "react-pdf": "^9.1.0",
     "react-player": "^2.14.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
@@ -71,6 +73,7 @@
     "@types/react-transition-group": "^4.4.10",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
+    "raw-loader": "^4.0.2",
     "ts-jest": "^29.1.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
