--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^9.1.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
+    "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
