--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "sass": "^1.77.8",
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
     "universal-cookie": "^4.0.4"
