--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
     "faker": "^5.5.3",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "next-redux-wrapper": "^8.1.0",
     "pdfjs-dist": "^3.10.111",
@@ -57,7 +58,8 @@
     "sass": "^1.77.8",
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -65,6 +67,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.4.1",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.3",
     "@types/next": "^9.0.0",
     "@types/node": "^20.14.2",
