--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.14.3",
     "@reduxjs/toolkit": "^2.2.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "20.4.2",
     "@types/react-dom": "18.2.7",
     "@types/react-toastify": "^4.1.0",
@@ -28,6 +29,10 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next-redux-wrapper": "^8.1.0",
     "quill": "^1.3.6",
     "react": "18.2.0",
@@ -57,6 +62,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
+    "@types/moment-timezone": "^0.5.30",
     "@types/quill": "^2.0.10",
     "@types/react-modal": "^3.16.0",
     "babel-jest": "^29.6.2",
