--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "moment-timezone": "^0.5.45",
     "next-redux-wrapper": "^8.1.0",
     "quill": "^1.3.6",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
