--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
+    "@types/jspdf": "^2.0.0",
     "@types/moment-timezone": "^0.5.30",
     "@types/quill": "^2.0.10",
     "@types/react-modal": "^3.16.0",
