--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.3",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/next": "^9.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
