--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "ts-loader": "^9.4.4",
     "typescript": "5.1.6",
     "universal-cookie": "^4.0.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
