--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "js-cookie": "^3.0.5",
     "next-auth": "^4.24.7",
     "next-redux-wrapper": "^8.1.0",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.10.111",
     "quill": "^2.0.1",
     "react": "18.2.0",
@@ -55,6 +56,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.0",
+    "react-signature-canvas": "^1.0.6",
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
@@ -78,6 +80,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.0",
+    "@types/react-signature-canvas": "^1.0.5",
     "@types/react-transition-group": "^4.4.10",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
