--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/faker": "^6.6.9",
     "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.31",
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -73,6 +74,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.4.1",
+    "@types/aos": "^3.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.3",
     "@types/next": "^9.0.0",
