--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,6 @@
     "app/interfaces/**/*.ts",
     "middleware.ts",
     "node_modules/react-redux"
-  ],
+, "app/components/course-analytics/graphs/AvgCompletedQuizzes", "app/components/course-analytics/graphs/AvgCompletedQuizzes"  ],
   "exclude": ["node_modules"]
 }
