--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "13.4.10",
     "faker": "^5.5.3",
     "file-saver": "^2.0.5",
+    "flagsmith": "^4.1.2",
     "google-auth-library": "^9.11.0",
     "google-map-react": "^2.2.1",
     "js-cookie": "^3.0.5",
