--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.4.1",
+    "@netlify/plugin-nextjs": "^5.7.1",
     "@types/aos": "^3.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/google-map-react": "^2.1.10",
