--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.2",
     "classnames": "^2.5.1",
     "clean": "^4.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.10",
@@ -81,6 +82,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@faker-js/faker": "^8.4.1",
     "@types/aos": "^3.0.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/google-map-react": "^2.1.10",
     "@types/jest": "^29.5.3",
