--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-audio-player": "^0.17.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -86,6 +87,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.0",
     "@types/react-signature-canvas": "^1.0.5",
